# PYTHON

./: .gitignore  LICENSE  README.md
Decorators/: Class_static_properties.ipynb  property_decorator.py
Decorators/class_dec_mod/: main.py
modules/auto_doc/: README.md
modules/code_visualize/: readme.md
modules/hashtables/: README.md  hash_table_00.py  hash_table_01.py  hashtable.py  test_hashtable.py
modules/json/: array.json  embedded.json  employee_json_data.json  person.json  reading_json.py  readme.md
modules/jupyter/: jupyter_pytest.ipynb  testNotebook.ipynb
modules/loguru_module/: logu_wrap_mod_test.py  logu_wrap_module.py  requirements.txt
modules/lru_cache/: dict_cache.py
modules/mongita/: mongita.py  mongita_README.md  mongita_functions.py
modules/py_word_dict/: definition.csv  definition_clean.csv  definition_clean2.csv  dictionary_snippets_test.ipynb  py_word_dict_script.ipynb  py_word_dict_script_fix.ipynb  vocab.csv  vocab_test.csv
modules/pytesseract/: ocr.py
modules/python_dotenv/: .env  main.py  readme.md
modules/seaborn/: readme.md
modules/snippets/: classes.py  enum.py  fibonacci.py  hash_table_readme.md  one_liners.md  one_liners.py  tags  test_hashtable.py
modules/snippets/poetry_pandas/: pyproject.toml
modules/timing/: README.md  pretty_timeit_mod.py  timing_decorator.py
modules/to_tuple/: args_kwargs.py  string_list_to_tuple.ipynb  (+2 more)
multithreading_processing/: cpu_bound_threading.py  io_bound_pub_sub.py  io_bound_threading.py  io_bound_threadsafe_exceptions.py  memory_profile_test.py  thread_safe_local_storage.py
(+188 files in other folders)
