[tool.poetry]
name = "poetry_pandas"
version = "0.1.0"
description = ""
authors = ["Ryan paik <ryanpaik@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
